fix: fix image display on small screen

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,5 +1,5 @@
 .Home {
-  @apply w-full h-screen bg-[#0a192f] mx-auto flex flex-col-reverse md:flex-row md:justify-between items-center pt-28 md:pt-40 pb-0 px-12 gap-12;
+  @apply w-full h-screen bg-[#0a192f] mx-auto flex flex-col-reverse md:flex-row md:justify-between items-center pt-28 md:pt-40 pb-0 px-0 sm:px-12 gap-12;
 }
 .home__container {
   @apply max-w-[1000px]  px-8;
